[gd_scene load_steps=3 format=3 uid="uid://drbs8u6ai0tym"]

[ext_resource type="Script" path="res://FPS_Label.gd" id="1_g57hw"]
[ext_resource type="Script" path="res://Options_Setting.gd" id="2_p6hdn"]

[node name="Options_Example" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="FPS_Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
script = ExtResource("1_g57hw")

[node name="Options_Setting" type="VBoxContainer" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1
script = ExtResource("2_p6hdn")

[node name="Resolution_OptionButton" type="OptionButton" parent="HBoxContainer/Options_Setting"]
layout_mode = 2

[node name="ScaleBox" type="HBoxContainer" parent="HBoxContainer/Options_Setting"]
layout_mode = 2

[node name="ScaleSlider" type="HSlider" parent="HBoxContainer/Options_Setting/ScaleBox"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
min_value = 50.0
max_value = 200.0
step = 5.0
value = 100.0
ticks_on_borders = true

[node name="ScaleLabel" type="Label" parent="HBoxContainer/Options_Setting/ScaleBox"]
layout_mode = 2
text = "100% - 1920x1080"

[node name="Scaler" type="OptionButton" parent="HBoxContainer/Options_Setting"]
layout_mode = 2
item_count = 3
selected = 0
popup/item_0/text = "SCALER"
popup/item_0/id = 0
popup/item_0/disabled = true
popup/item_0/separator = true
popup/item_1/text = "BILINEAR"
popup/item_1/id = 1
popup/item_2/text = "AMS FSR 2.2"
popup/item_2/id = 2

[node name="FSROptions" type="OptionButton" parent="HBoxContainer/Options_Setting"]
visible = false
layout_mode = 2
item_count = 5
selected = 0
popup/item_0/text = "FSR Options"
popup/item_0/id = 0
popup/item_0/disabled = true
popup/item_0/separator = true
popup/item_1/text = "Performace"
popup/item_1/id = 1
popup/item_2/text = "Balanced"
popup/item_2/id = 2
popup/item_3/text = "Quality"
popup/item_3/id = 3
popup/item_4/text = "Ultra Quality"
popup/item_4/id = 4

[node name="FullScreen_CheckBox" type="CheckBox" parent="HBoxContainer/Options_Setting"]
layout_mode = 2
text = "FullScreen"

[node name="vsync_checkbox" type="CheckBox" parent="HBoxContainer/Options_Setting"]
layout_mode = 2
text = "VSYNC Enabled"

[node name="Screen_Selector" type="OptionButton" parent="HBoxContainer/Options_Setting"]
layout_mode = 2

[connection signal="item_selected" from="HBoxContainer/Options_Setting/Resolution_OptionButton" to="HBoxContainer/Options_Setting" method="_on_option_button_item_selected"]
[connection signal="value_changed" from="HBoxContainer/Options_Setting/ScaleBox/ScaleSlider" to="HBoxContainer/Options_Setting" method="_on_scale_slider_value_changed"]
[connection signal="item_selected" from="HBoxContainer/Options_Setting/Scaler" to="HBoxContainer/Options_Setting" method="_on_scaler_item_selected"]
[connection signal="item_selected" from="HBoxContainer/Options_Setting/FSROptions" to="HBoxContainer/Options_Setting" method="_on_fsr_options_item_selected"]
[connection signal="toggled" from="HBoxContainer/Options_Setting/FullScreen_CheckBox" to="HBoxContainer/Options_Setting" method="_on_full_screen_check_box_toggled"]
[connection signal="toggled" from="HBoxContainer/Options_Setting/vsync_checkbox" to="HBoxContainer/Options_Setting" method="_on_vsync_checkbox_toggled"]
[connection signal="item_selected" from="HBoxContainer/Options_Setting/Screen_Selector" to="HBoxContainer/Options_Setting" method="_on_screen_selector_item_selected"]
